<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityConsulta">

  <EditText
      android:id="@+id/txt_sid"
      android:layout_width="0dp"
      android:layout_height="41dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="160dp"
      android:ems="10"
      android:hint="@string/txt_id"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btn_Buscar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="23dp"
      android:layout_marginEnd="24dp"
      android:onClick="Buscar"
      android:text="@string/btn_busc"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/txt_sid"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.036" />

  <Button
      android:id="@+id/btn_Actualizar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="24dp"
      android:onClick="Actualizar"
      android:text="@string/btn_Actu"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_sdireccion" />

  <Button
      android:id="@+id/btn_Eliminar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="36dp"
      android:layout_marginEnd="24dp"
      android:onClick="Eliminar"
      android:text="@string/btn_Eli"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_Actualizar"
      app:layout_constraintVertical_bias="0.0" />

  <EditText
      android:id="@+id/txt_snombre"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:hint="@string/txt_nom"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_sid" />

  <EditText
      android:id="@+id/txt_sapellido"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:hint="@string/txt_ape"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_snombre" />

  <EditText
      android:id="@+id/txt_sedad"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="28dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:hint="@string/txt_edad"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_sapellido" />

  <EditText
      android:id="@+id/txt_scorreo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:hint="@string/txt_correo"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_sedad" />

  <EditText
      android:id="@+id/txt_sdireccion"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:hint="@string/txt_dire"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_scorreo" />

  <Button
      android:id="@+id/btn_Regresar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="24dp"
      android:onClick="Regresar"
      android:text="@string/btn_"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_Eliminar" />

</androidx.constraintlayout.widget.ConstraintLayout>